Proofreading content, styling

--- a/combat/advanced_combat.html
+++ b/combat/advanced_combat.html
@@ -99,17 +99,19 @@
 
 <h2>Advanced Combat Techniques</h2>
 
+
+<div id="leftside">
 <h3>Critical Strikes</h3>
 
 <p>
-	Sometimes an enemy can especially vulnerable. You can take advantage of turned backs and moments of extreme vulnerability with Critical Strikes. 
+	Sometimes an enemy can be especially vulnerable. You can take advantage of turned backs and moments of extreme vulnerability with Critical Strikes. 
 	When performing a Critical Strike, you will become invincible for the duration of the animation and the enemy will take extreme damage.
 	There are several ways to perform a Critical Strike.
 </p>
 
 <h4>Backstab</h4>
 <p>
-	If you manage to sneak up behind an enemey without them noticing, or are able to strafe around them mid-combat, you have the option to perform a Backstab. 
+	If you manage to sneak up behind an enemy without them noticing, or are able to strafe around them mid-combat, you have the option to perform a Backstab. 
 	To perform a Backstab, you have to be standing directly behind an enemy and have your shield down, then perform a light attack. If you've positioned yourself correctly,
 	you and the enemy will become locked in the Backstab animation, during which you'll be invincible and you'll deal a ton of damage in one strike.
 	
@@ -149,13 +151,13 @@
 
 <h4>Kick</h4>
 <p>
-	To perform a kick, tap up on the left stick (L3) and tap the right bumper (R1) at the same time. Kick enemies when they have their shield up tobreak their guard, and an audio queue will play leaving them vulnerable.
-	Proceed to fronstab them as if you had parried.
+	To perform a kick, tap up on the left stick (L3) and tap the right bumper (R1) at the same time. Kick enemies when they have their shield up to break their guard, and an audio queue will play leaving them vulnerable.
+	Proceed to front stab them as if you had parried.
 	
 	<h5>Tips:</h5>
 	<ul>
 		<li>
-			You can also kick enemies to interrupt their attacks and push them back a little for you to follow up with a statndard attack (No critical strike).
+			You can also kick enemies to interrupt their attacks and push them back a little for you to follow up with a standard attack (No critical strike).
 		</li>
 		
 		<li>
@@ -166,16 +168,17 @@
 
 <h4>Guard Break</h4>
 <p>
-	Another option for when an enemy has a shield up is to simply attack their shield until they run out of stamina, at which point they will be vulnerable for a fronstab.
+	Another option for when an enemy has a shield up is to simply attack their shield until they run out of stamina, at which point they will be vulnerable for a front stab.
 	
 	<h5>Tips:</h5>
 	<ul>
 		<li>
-			Be careful when attempting to guard break by attacking, as attack a shield will quickly deplete all of your stamina.
+			Be careful when attempting to guard break by attacking, as attacking a shield will quickly deplete all of your stamina.
 		</li>
 		
 		<li>
 			Never attempt to do this against someone using a Greatshield, as the stamina consumption for blocking with a Greatshield is very small and it's more likely you'll run out of stamina first.
+			Instead, kick their Greatshield twice to break their guard.
 		</li>
 	</ul>
 </p>
@@ -183,7 +186,7 @@
 
 <h4>Plunging Attack</h4>
 <p>
-	If you ever find yourself ina situation where you can drop down from a ledge on top of an enemy, you can perform a light attack while you're falling to perform a Plunging Attack.
+	If you ever find yourself in a situation where you can drop down from a ledge on top of an enemy, you can perform a light attack while you're falling to perform a Plunging Attack.
 	Plunging Attacks deal incredibly high damage, so always take the chance to perform one if you can.
 	
 	<h5>Tips:</h5>
@@ -211,7 +214,9 @@
 		<li>Frost</li>
 		<li>Curse</li>
 	</ul>
+</p>	
 	
+<p>	
 	When you are hit with something that inflicts a status effect, a bar will appear in the middle of the screen indicating the effect's build up.
 	If the bar fills all the way up, you will become affected by the effect. You can inflict Status Effects on you enemies the exact same way,
 	however you cannot see the bar of buildup on any character other than yourself.
@@ -224,11 +229,11 @@
 <h5>Tips:</h5>
 	<ul>
 		<li>
-			Use the Bloodred Moss Clump item to get rid of any Bleed build up on your character.
+			Use the <strong>Bloodred Moss Clump</strong> item to get rid of any Bleed build up on your character.
 		</li>
 		
 		<li>
-			You can use the Carthus Rouge item to buff your weapon with the Bleed effect. If your weapon already has a Bleed effect, the Carthus
+			You can use the <strong>Carthus Rouge</strong> item to buff your weapon with the Bleed effect. If your weapon already has a Bleed effect, the Carthus
 			Rouge will cause Bleed to build in bigger chunks per hit.
 		</li>
 	</ul>
@@ -236,16 +241,16 @@
 <h4>Poison</h4>
 
 <p>
-	Once the Poison Bar has been fully built up, the character will start emmitting purple vapor and will slowly loose health over time.
+	Once the Poison Bar has been fully built up, the character will start emitting purple vapor and will slowly lose health over time.
 </p>
 <h5>Tips:</h5>
 	<ul>
 		<li>
-			Use the Purple Moss Clump item to cure the Poison effect and get rid of any Poison build up on your character.
+			Use the <strong>Purple Moss Clump</strong> item to cure the Poison effect and get rid of any Poison build up on your character.
 		</li>
 		
 		<li>
-			You can use the Rotten Pine Resin item to buff your weapon with the Poison effect. If your weapon already has a Poison effect, the Rotten
+			You can use the <strong>Rotten Pine Resin</strong> item to buff your weapon with the Poison effect. If your weapon already has a Poison effect, the Rotten
 			Pine Resin will cause Poison to build in bigger chunks per hit.
 		</li>
 	</ul>
@@ -259,7 +264,7 @@
 <h5>Tips:</h5>
 	<ul>
 		<li>
-			Make sure to use the Blooming Purple Moss Clump item to cure the Toxic effect and to get rid of any Toxic build up on your character.
+			Make sure to use the <strong>Blooming Purple Moss Clump</strong> item to cure the Toxic effect and to get rid of any Toxic build up on your character.
 		</li>
 	</ul>
 
@@ -272,7 +277,7 @@
 <h5>Tips:</h5>
 	<ul>
 		<li>
-			Use the Rime Blue Moss Clump item to cure the Toxic effect and to get rid of any Frost build up on your character.
+			Use the <strong>Rime Blue Moss Clump</strong> item to cure the Toxic effect and to get rid of any Frost build up on your character.
 		</li>
 	</ul>
 
@@ -284,7 +289,7 @@
 <h5>Tips:</h5>
 	<ul>
 		<li>
-			Make sure to use the Purging Stone item to get rid of any Curse build up on your character.
+			Make sure to use the <strong>Purging Stone</strong> item to get rid of any Curse build up on your character.
 		</li>
 		
 		<li>
@@ -292,7 +297,7 @@
 		</li>
 	</ul>
 
-	
+</div>	
 <footer>
 
 		Copyright 2016 David Winstein-Hibbs <br />
