--- a/combat/combat.html
+++ b/combat/combat.html
@@ -97,30 +97,32 @@
 
 <h2>Combat</h2>
 
+
+<div id="leftside">
 <h3>Combat Overview</h3>
 <p>
 	Combat in <cite>Dark Souls 3</cite> is one of the most immersive combat systems in any game. The controls and hitboxes are incredibly tight and every hit feels like it truly has power behind it.
 	That being said, being unprepared for combat in <cite>Dark Souls 3</cite> can lead to a very frustrating run. If you allow enemies to hit you even just a couple times, you'll die. Most bosses
 	can two or even one shot you. However, the main concept to remember is that every single attack, whether it is yours or an enemy's, has a windup time before it actually strikes and a cooldown time
-	where the character is vulnerable after a swing. Always try to time your attacks to hit when your opponent is in those vulnerable states and you are in a safe position. It takes practice to fully
+	after a strike where the character is vulnerable. Always try to time your attacks to hit when your opponent is in those vulnerable states and you are in a safe position. It takes practice to fully
 	understand how to fight in <cite>Dark Souls 3</cite> but once you've figured it out, it can be some of the most satisfying combat you'll ever experience in a game.
 </p>
 
-<h4>Weapon Movesets</h4>
+<h3>Weapon Movesets</h3>
 <p>
 	You can beat <cite>Dark Souls 3</cite> using any weapon. Every weapon has the potential to carry you through the game, however every weapon in <cite>Dark Souls 3</cite> has a unique moveset. 
 	The timing and direction of the swing of a weapon is different between them all, offering a huge variety of options for how you want to approach combat. If you like to attack quickly with less
 	damage per swing, pick up a katana or a longsword. If you like to pack a real punch when you strike, pick up a great sword or a great axe. There are so many options, the weapon variety is the 
-	real replayability that the game offers. Try out every weapon you find until you find one that really matches your playstyle. In other words, no weapon is objectively better than any other,
+	real replayability that the game offers. Try out every weapon you find until you come across one that really matches your playstyle. In other words, no weapon is objectively better than any other,
 	just use what you like to use.
 </p>
 
-<h4>Stamina Management</h4>
+<h3>Stamina Management</h3>
 <p>
 	The most important thing to keep in mind when you're fighting (besides your health) is your stamina bar. That is the green bar on the top left of the screen. Every action besides walking consumes stamina,
-	and if you run out you will become incredibly vulnerable. If you get low on stamina, make sure to leave enough for you to back off to a safe distance to recharge. It recharges fairly quickly so you can reenter 
-	fights without waiting too long, but be careful if you are using a shield; holding a shield up to protect you will cause you regenerate stamina much more slowly. Keep that in mind; don't hold your shield up
-	if you don't think you're about to be hit by something.
+	and if you run out of stamina you will become incredibly vulnerable. If you get low on stamina, make sure to leave enough for you to back off to a safe distance to recharge. It recharges fairly quickly so you can reenter 
+	fights without waiting too long, but be careful if you are using a shield; holding a shield up to protect you will cause you regenerate stamina much more slowly.
+	Only hold up your shield if you think you are about to be hit by something.
 </p>
 
 <h3>Combat Basics</h3>
@@ -135,7 +137,8 @@
 		<ul>
 			<li>
 				If you feel comfortable, try fighting without locking on. 
-				This will help you learn your weapons hit-boxes a lot better and allows a much more free range of movement when fighting enemies.
+				This will help you learn your weapon's hit-boxes a lot better and allows a much more free range of movement when fighting enemies, but can be difficult to aim
+				if you don't know what you're doing.
 			</li>	
 		</ul>
 </p>
@@ -149,7 +152,7 @@
 	<ul>
 		<li>
 			Its quick windup, cooldown, and low stamina cost
-			makes it ideal for chaining together attacks and for escaping quickly to safety after striking.
+			makes the light attack ideal for chaining together attacks and for escaping quickly to safety after striking.
 		</li>
 	</ul>
 <p>
@@ -157,13 +160,13 @@
 <h4>Heavy Attack</h4>
 <p>
 	Perform a heavy attack by pressing the right trigger (R2) on your gamepad.
-	The heavy attack is considerably slower and cost more stamina but more powerful than the light attack. You can also charge up the heavy attack by holding down R2 (the right trigger). Charging the heavy attack
+	The heavy attack is considerably slower and costs more stamina but deals more damage than the light attack. You can also charge up the heavy attack by holding down R2 (the right trigger). Charging the heavy attack
 	will cause it to deal extra damage. 
 	
 	<h5>Tips:</h5>
 	<ul>
 		<li>
-			You don't have to charge up the attack all the way, making it great for timing powerful blows.
+			You don't have to charge up a heavy attack all the way, making it great for timing powerful blows.
 		</li>
 	</ul> 
 </p>
@@ -175,9 +178,15 @@
 	
 	<h5>Tips:</h5>
 	<ul>
+	
+		<li>
+			Tap Y again to stop dual wielding.
+		</li>
 		<li>
 			Hold down the Y button to dual wield your left hand weapon.
 		</li>	
+		
+		
 	</ul>
 </p>
 
@@ -197,13 +206,18 @@
 <h4>Blocking</h4>
 <p>
 	If you have a shield equipped in your left hand, you can press and hold the right bumper (R1) to protect your front with the shield. If an enemy strikes you in this state, you will recieve
-	significantly less damage (or none at all depending on your shield) and the enemy will recoil a little opening a window of opportunity for you to strike back. Having your shield up will cause
+	significantly less damage (or none at all depending on your shield), lose a certain amount of stamina
+	based on how powerful the enemy's blow was, and the enemy will recoil a little, opening a window of opportunity for you to strike back. Having your shield up will cause
 	stamina to regenerate much slower than normal.
 	
 	<h5>Tips:</h5>
 	<ul>
 		<li>
 			If you have a shield with 100% Physical defense, it will block all damage done by almost all enemy attacks in the game apart from elemental and magical damage.
+		</li>
+		
+		<li>
+			Shields with higher Stability will cause you to lose less stamina when blocking attacks.
 		</li>
 	</ul>
 </p>
@@ -232,7 +246,7 @@
 		</li>
 		
 		<li>
-			You can increase your maximunm Equip Load by increasing your Vitality stat at the Firekeeper.
+			You can increase your maximum Equip Load by increasing your Vitality stat at the Firekeeper.
 		</li>
 	</ul>	
 </p>
@@ -249,11 +263,12 @@
 		</li>
 		
 		<li>
-			You cannot sprint if you have over 100% Equipment Load.
+			You cannot sprint if your Weight Ratio is above 100%.
 		</li>
 	
 	</ul>
 </p>
+</div>
 
 <footer>
 
