--- a/equipment/equipment.html
+++ b/equipment/equipment.html
@@ -99,6 +99,7 @@
 
 <h2>Equipment</h2>
 
+<div id="leftside">
 <h3>Equipment Overview</h3>
 <p>
 	Equipment refers to any item that can be equipped onto your character such as weapons, shields, armor, rings, etc. You can view your currently
@@ -161,17 +162,17 @@
 	The Player Status division displays specific information about your character, such as its:
 	
 	<ul>
-		<li>Level - How many total stats you have.</li>
-		<li>Stat Distribution - How many points you have distributed into your main stats.</li>
-		<li>HP (Health Points) - How much damage you can take before you die. You can increase your HP by leveling up the Vigor stat.</li>
-		<li>FP (Focus Points) - Resource consumed when casting spells or performing Weapon Arts (similar to Mana in other games). You can increase the number of Attunement Slots by leveling up the Attunement stat.</li>
-		<li>Stamina - Determines how many actions you can make in combat before needing to back off. You can increase your max Stamina by leveling up the Endurance stat.</li>
-		<li>Equip Load - Shows the total weight of everything you are wearing over / your max Equip Load. At the top of the screen you can see your Weight Ratio. 
+		<li><strong>Level</strong> - How many total stats you have.</li>
+		<li><strong>Stat Distribution</strong> - How many points you have distributed into your main stats.</li>
+		<li><strong>HP (Health Points)</strong> - How much damage you can take before you die. You can increase your HP by leveling up the Vigor stat.</li>
+		<li><strong>FP (Focus Points</strong>) - Resource consumed when casting spells or performing Weapon Arts (similar to Mana in other games). You can increase the number of Attunement Slots by leveling up the Attunement stat.</li>
+		<li><strong>Stamina</strong> - Determines how many actions you can make in combat before needing to back off. You can increase your max Stamina by leveling up the Endurance stat.</li>
+		<li><strong>Equip Load</strong> - Shows the total weight of everything you are wearing over / your max Equip Load. At the top of the screen you can see your Weight Ratio. 
 			Always keep your Weight Ratio below 70%. You can increase your maximum Equip Load by leveling up the Vitality stat.</li>
-		<li>Poise - Supposed to determine how much you can resist staggering when hit by enemies, however this stat seems to actually do nothing in <cite>Dark Sousl 3</cite>
+		<li><strong>Poise</strong> - Supposed to determine how much you can resist staggering when hit by enemies, however this stat seems to actually do nothing in <cite>Dark Sousl 3</cite>
 			You can increase your Poise by wearing heavy armor.</li>
-		<li>Item Discovery - Determines the chance of rare items to drop from enemies. You can increase your Item Discovery by leveling up the Luck stat.</li>
-		<li>Attunement Slots - Determines how many spells you can have equipped at a time. You can increase the number of Attunement Slots by leveling up the Attunement stat.</li>
+		<li><strong>Item Discovery</strong> - Determines the chance of rare items to drop from enemies. You can increase your Item Discovery by leveling up the Luck stat.</li>
+		<li><strong>Attunement Slots</strong> - Determines how many spells you can have equipped at a time. You can increase the number of Attunement Slots by leveling up the Attunement stat.</li>
 	
 	</ul>
 </p>
@@ -186,7 +187,7 @@
 	</ul>
 	
 </p>
-
+</div>
 
 <footer>
 
