--- a/getting started/firelink.html
+++ b/getting started/firelink.html
@@ -95,6 +95,10 @@
 	</div>	
 
 <h2>Firelink Shrine</h2>
+
+
+<div id="leftside">
+<h3>What is Firelink Shrine?</h3>
 <p>
 	After you've defeated the first boss, you'll come across a location known as Firelink Shrine. This is the hub area of the game. Whenever you need to level up your character, buy items,
 	upgrade equipment, purchase new spells or just chill out with the NPCs (Non-Player Characters) you've met along the way, you should come to Firelink Shrine. Once you've activated the bonfire
@@ -153,6 +157,7 @@
 	As you play through the game, you may come across NPCs scattered across the world. If you talk to them, they may choose to come back to Firelink Shrine to help you on your journey. Explore the place frequently
 	and you may find additional vendors that sell rare weapons, materials and spells for souls you've collected.
 </p>
+</div>
 
 <footer>
 
