--- a/getting started/items.html
+++ b/getting started/items.html
@@ -99,6 +99,8 @@
 
 <h2>Items</h2>
 
+<div id="leftside">
+<h3>Items Overview</h3>
 <p>
 	Items can be found throughout the game on corpses with a shining white marker above them. Items are also
 	purchasable from vendors. You can view all of your items by pressing Start, then selecting the Inventory box, which is the 
@@ -128,35 +130,35 @@
 <h3>Tools</h3>
 <p>
 	Tools are your basic consumable items. Most tools can be used at any time to cause a certain effect to happen. For example:
-	if you use the Firebomb tool, you will through a Firebomb and the total number of Firbombs in your inventory will decrease by one.
+	if you use the Firebomb tool, you will throw a Firebomb and the total number of Firebombs in your inventory will decrease by one.
 	
 	
 </p>
 
-<h4>Multiplayer Items</h4>
-<p>Some tools are used specifically for connecting with other players, these are called Multiplayer Items.</p>
+<h4 class="multitool">Multiplayer Tools</h4>
+<p class="multip">Some tools are used specifically for connecting with other players, these are called Multiplayer Tools.</p>
 
-<h5>White Sign Soapstone</h5>
-<p>
+<h4 class="multitool">White Sign Soapstone</h4>
+<p class="multip">
 	Buy this item from the Shrine Handmaiden for 500 souls. Use the White Sign Soapstone to leave a Summon Sign on the ground. Players in other games
 	can activate your Summon Sign to summon you as a phantom in their world to help them progress through their game.
 </p>
 
-<h5>Black Separation Crystal</h5>
-<p>
+<h4 class="multitool">Black Separation Crystal</h4>
+<p class="multip">
 	Use the Black Separation Crystal to make friendly phantoms leave your world. Some paths are blocked if you have friendly phantoms in your world,
 	so you may have to use this to progress. Cannot banish invading phantoms.
 </p>
 
-<h5>Embers</h5>
-<p>
-	If you use an Ember, your character will go into the Embered state until they die. While Embered, your character will have increased HP,
+<h4 class="multitool">Embers</h4>
+<p class="multip">
+	Whenever you use an Ember (or whenever you kill a boss), your character will go into the Embered state until they die. While Embered, your character will have increased HP,
 	added particle effects on their clothing, and the ability to summon other players who have left their Summon Sign down. Beware though,
-	Embering and summoning phantoms to help will increase the chance of an invading player to enter your world and try to kill you.
+	Embering and summoning phantoms to help will increase the chance of an invading player to enter your world and try to kill you. 
 </p>
 
-<h5>Cracked Red Eye Orbs/Red Eye Orb</h5>
-<p>
+<h4 class="multitool">Cracked Red Eye Orbs/Red Eye Orb</h4>
+<p class="multip">
 	When used, Red Eye Orbs will cause you to invade another player's world in an attempt to kill them. Cracked Red Eye Orbs can only be used
 	once, but once you get a full Red Eye Orb you can invade an unlimited 
 </p>
@@ -224,14 +226,14 @@
 
 <h3>Arrows/Bolts</h3>
 <p>
-	Arrows that can be shot from Bows. Bolts that can be shot from Crossbows.
+	Arrows can only be shot from Bows. Bolts can only be shot from Crossbows. Greatarrows can only be shot from Greatbows.
 </p>
 
 <h3>Rings</h3>
 <p>
 	Rings provide additional effects when equipped. You can have up to 4 rings equipped at a time.
 </p>
-
+</div>
 
 <footer>
 
