--- a/getting started/souls.html
+++ b/getting started/souls.html
@@ -98,6 +98,8 @@
 	<h2>Souls</h2>
 	
 	
+	<div id="leftside">
+	
 	<h3>Collecting Souls</h3>
 	<p>
 		In <cite>Dark Souls 3</cite>, every character carries souls. The stronger they are, the more souls they carry. It is your goal as the player to steal the souls of your enemies by killing
@@ -114,7 +116,7 @@
 	<h3>Losing Souls</h3>
 	<p>
 		Souls are not permanent. Just like how you can steal the souls of enemies, if you die you will lose all of the souls you've accumulated up until that point. But don't despair just yet,
-		they're not completely lost. All of your souls will be sitting in a puddle of blood with a large green soul orb hovering above it back where you died. Fight your way back to that location and
+		they're not completely lost. All of your souls will be sitting in a puddle of blood with a large green soul orb hovering above it back in the location where you died. Fight your way back to that location and
 		you'll be able to pick up all of the souls you lost. However, if you die again along the way towards your souls, all of those souls will be permanently lost.
 	</p>
 	
@@ -128,10 +130,12 @@
 	
 	<h3>Soul Items</h3>
 	<p>
-		Sometimes you'll find items called: Soul of a (insert name here). These are Soul Items. If you use them, you will destroy the item and
+		Sometimes you'll find items called: "Soul of a (insert name here)". These are Soul Items. If you use them, you will destroy the item and
 		gain a certain number of souls. It is best to save Soul Items until you need the extra souls to level up or buy something as the items will
 		stay in your inventory when you die but your souls will not.
 	</p>
+	
+	</div>
 
 	<footer>
 
