--- a/index.html
+++ b/index.html
@@ -94,12 +94,13 @@
 		</ul>
 	</div>	
 	
+
 	<h2>Welcome to Beginner's Bonfire</h2>
 	
 	
 	<p>
-		Welcome to Beginner's Bonfire, a <cite>Dark Souls 3</cite> tutorial website. If you're struggling with the brutal difficulty of the game and ned some help getting good, this is the place to be. 
-		Soon you too can enjoy the euphoric combat and gorgeous world of <cite>Dark Souls 3</cite>
+		Welcome to Beginner's Bonfire, a <cite>Dark Souls 3</cite> tutorial website. If you're struggling with the brutal difficulty of the game and need some help getting good, this is the place to be. 
+		Soon you too can enjoy the euphoric combat and gorgeous world of <cite>Dark Souls 3</cite>.
 	</p>
 	
 	<p>
