--- a/magic/magic.html
+++ b/magic/magic.html
@@ -99,7 +99,7 @@
 
 <h2>Magic</h2>
 
-
+<div id="leftside">
 <h3>Magic Overview</h3>
 <p>
 	Like most fantasy role-playing games, <cite>Dark Souls 3</cite> boasts its own unique system of magic.
@@ -110,8 +110,9 @@
 		<li><a href= "pyromancy.html">Pyromancy</a></li>
 		<li><a href= "miracles.html">Mircales</a></li>
 	</ul>
+</p>	
 	
-	
+<p>
 	Spells can range from simple damaging projectiles to heals to weapon buffs to character buffs and many more. Check out the description of each one you find to figure out what it does and which
 	school of magic it belongs to.
 
@@ -168,7 +169,7 @@
 	<a href= "pyromancy.html">Pyromancy</a>
 	<a href= "miracles.html">Mircales</a>
 	
-	
+</div>	
 <footer>
 
 		Copyright 2016 David Winstein-Hibbs <br />
