--- a/magic/miracles.html
+++ b/magic/miracles.html
@@ -99,6 +99,7 @@
 
 <h2>Miracles</h2>
 
+<div id="leftside">
 <h3>Miracles Overview</h3>
 <p>
 	Miracles are tales of the gods which can be used to cause magical effects to happen. Most Miracles are utility spells such as healing, buffs, etc., however there are a few offensive
@@ -108,16 +109,16 @@
 
 <h3>Scaling</h3>
 <p>
-	Miracles deal more damage the more points you have invested in the Faith stats. 
+	Miracles deal more damage and restore more health the more points you have invested in the Faith stat. 
 	Miracles will also have a required level of Faith in order to be able to cast them.
 	Generally, stronger Miracles require a higher level of Faith in order to cast.
 </p>
 
 <h3>Casting Equipment</h3>
 <p>
-	Miracles require a Talisman or a Chime to be equipped in order to cast. Chimes have a Weapon Art that causes a slow heal over time, and Talismans have a Weapon art which causes your character
-	to not flich when casting even if they're hit by an enemy attack. The Herald starts with a Talisman, and the Cleric starts with a chime. Chimes and Talismans can be upgraded
-	at Andre the Blacksmith just like a normal weapon.
+	Miracles require a Talisman or a Chime to be equipped in order to cast. Chimes have a Weapon Art that causes a slow heal over time, and Talismans have a Weapon Art which causes your character
+	to not flinch when casting even if you're hit by an enemy attack. The Herald starts with a Talisman, and the Cleric starts with a chime. Chimes and Talismans can be upgraded
+	at Andre the Blacksmith just like normal weapons.
 </p>
 
 
@@ -127,16 +128,18 @@
 	Below are all the steps you must follow to get her to come assist you in Firelink Shrine:
 	
 	<ol>
-		<li>Go to the Undead Settlement and find the Mortician's Ashes item.</li>
-		<li>Bring the Mortician's Ashes to the Shrine Handmaiden in Firelink Shrine.</li>
-		<li>Purchase the Grave Key from the Shrine Handmaiden for 1500 Souls.</li>
-		<li>Go to the sewers in the Undead Settlement and unlock the door with the Grave Key.</li>
+		<li>Go to the <strong>Undead Settlement</strong> and find the <strong>Mortician's Ashes</strong> item.</li>
+		<li>Bring the <strong>Mortician's Ashes</strong> to the <strong>Shrine Handmaiden</strong> in <strong>Firelink Shrine</strong>.</li>
+		<li>Purchase the <strong>Grave Key</strong> from the <strong>Shrine Handmaiden</strong> for 1500 Souls.</li>
+		<li>Go to <strong>the sewers in the Undead Settlement</strong> and unlock the door with the Grave Key.</li>
 		<li>Fight your way through the area untill you reach another door.</li>
-		<li>Turn around and Irina will be sitting an an open cell in front of you.</li>
+		<li><strong>Turn around</strong> and <strong>Irina</strong> will be sitting an an open cell in front of you.</li>
 		<li>Talk to Irina and Touch her.</li>
-		<li>Talk to Irina again and she will teleport to Firelink Shrine.</li>
+		<li><strong>Talk to Irina again</strong> and she will teleport to Firelink Shrine.</li>
 	</ol>
+</p>	
 	
+<p>	
 	Once Irina is in Firelink Shrine, she can sell you new Miracles and a ring that allows for the attunement of an additional spell.
 </p>
 
@@ -145,6 +148,7 @@
 	If you come across any Braille Divine Tomes during your adventure, bring them to Irina in Firelink Shrine. Once she has read them, you will be able to purchase new and stronger miracles from
 	her.
 </p>
+</div>
 
 <footer>
 
