--- a/magic/pyromancy.html
+++ b/magic/pyromancy.html
@@ -99,7 +99,7 @@
 
 <h2>Pyromancy</h2>
 
-
+<div id="leftside">
 <h3>Pyromancy Overview</h3>
 <p>
 	Pyromancy is the art of manipulating fire. The spells in the Pyromancy school are mostly offensive in nature with a few utility spells, 
@@ -131,7 +131,7 @@
 <p>
 	Be on the lookout for Pyromancy Tomes. Bring these key items to Cornyx in Firelink Shrine and he will add a bunch of new Pyromancies to his inventory for you to buy.
 </p>
-
+</div>
 
 <footer>
 
