--- a/magic/sorcery.html
+++ b/magic/sorcery.html
@@ -99,7 +99,7 @@
 
 <h2>Sorcery</h2>
 
-
+<div id="leftside">
 <h3>Sorcery Overview</h3>
 <p>
 	Sorcery is the art of harnessing the magical power of souls and unleashing it against your foes. Most spells in the Sorcery school are offensive, ranging from projectiles to
@@ -135,7 +135,7 @@
 	Keep your eyes peeled for Sorcery Scrolls. These key items can be brought to Orbeck in Firelink Shrine (if you've found him already), and he will then have new and more powerful
 	Sorceries for you to buy. Be sure to bring Orbeck at least one Sorcery Scroll before you fight the Abyss Watchers, or else he will leave Firelink Shrine forever.	
 </p>
-
+</div>
 
 
 <footer>
