--- a/getting started/overview.html
+++ b/getting started/overview.html
@@ -97,10 +97,14 @@
 	
 	<h2>Getting Started</h2>
 
+	
+	<div id="leftside">
+	<h3>Role-Playing Overview</h3>
 	<p>
-		At its core, <cite>Dark Souls 3</cite> is a role-playing game, which mean that you, the player, assume the role of the playable character. 
+		At its core, <cite>Dark Souls 3</cite> is a role-playing game, which means that you, the player, assume the role of the playable character. 
 		The real fun in this game emerges when you get creative about who your character is, and <cite>Dark souls 3</cite> does a great job of giving players 
-		creative freedom when it comes to character customization. You can name them whatever you like, and change their appearance to your satisfaction. Because the actual story
+		creative freedom when it comes to character customization. You can name them whatever you like, change their appearance to your satisfaction, and 
+		have a huge variety of weapons, armor, and spells at your disposal. Because the actual story
 		in the game is fairly vague, it encourages the player to project their own story onto it.
  
 		
@@ -108,22 +112,23 @@
 	
 	<h3>Statistics</h3>
 	<p>
-		The most important thing to keep in mind to succeed in <cite>Dark Souls 3</cite> are your character's stats. Basically, the stats are a numerical representation of how powerful they are in
-		certain fields. Here is a list to explain each stat and whether or not you should level it during your playthrough
+		The most important thing to keep in mind to succeed in <cite>Dark Souls 3</cite> are your character's stats. Basically, the stats are a numerical representation of how powerful your character is in
+		certain fields. Here is a list to explain each stat and whether or not you should level it during your playthrough:
 	</p>
 	
 		<ul>
-			<li>Vigor - Determines your Max Health Points. Level this to make your character more beefy so they can absorb more hits.</li>
-			<li>Attunement - Determines your Max Focus Points (like Mana in other games) and your number of Attunement Slots which you can equip spells to. Level this if you plan on making a character that uses magic</li>
-			<li>Endurance - Determines your Max Stamina. Stamina is really important because almost every action has a stamina cost. Level this on every character so they can swing their weapon more, dodge more, run farther, and cast more spells without waiting for it to recharge.</li>
-			<li>Vitality - Determines your Max Equip Load. Basically, this is stat to level if you want to wear heavy armor. Leveling Vitality will allow you to wear heavy gear and still be able to dodge roll properly.</li>
-			<li>Strength - Determines weapon damage for Strength Scaling weapons. The damage of some weapons scales with your Strength Stat. Usually these weapons are big and slow, but pack quite a punch.</li>
-			<li>Dexterity - Determines weapon damage for Dexterity Scaling weapons. Like Strength, the damage of some weapons scale with Dexterity. These weapons are usually smaller and have faster swing animations, but tend to do less damage per swing than Strength weapons</li>
-			<li>Faith - Determines the effectiveness of Miracles. Miracles are like light magic, so increase your Faith if you want to make a cleric or paladin-like character that utilizes lightning and healing.</li>
-			<li>Intelligence - Determines the effectiveness of Sorceries and Pyromancies. Sorceries are another type of magic that is more arcane, and Pyromancies are the third and final form of magic which is all based on fire. 
+			<li><strong>Vigor</strong> - Determines your Max Health Points. Level this to make your character more beefy so they can absorb more hits.</li>
+			<li><strong>Attunement</strong> - Determines your Max Focus Points (like Mana in other games) and your number of Attunement Slots which you can equip spells to. Level this if you plan on making a character that uses magic.</li>
+			<li><strong>Endurance</strong> - Determines your Max Stamina. Stamina is really important because almost every action has a stamina cost. Level this on every character so they can swing their weapon more, dodge more, run further, and cast more spells without waiting for stamina to recharge.</li>
+			<li><strong>Vitality</strong> - Determines your Max Equip Load. Basically, this is stat to level if you want to wear heavy armor. Leveling Vitality will allow you to wear heavy gear and still be able to dodge roll properly.</li>
+			<li><strong>Strength</strong> - Determines weapon damage for Strength Scaling weapons. The damage of some weapons scales with your Strength Stat. Usually these weapons are big and slow, but pack quite a punch.</li>
+			<li><strong>Dexterity</strong> - Determines weapon damage for Dexterity Scaling weapons. Like Strength, the damage of some weapons scale with Dexterity. These weapons are usually smaller and have faster swing animations, but tend to do less damage per swing than Strength weapons. (Note: Many
+											weapons scale with both Strength and Dexterity to some degree.)</li>
+			<li><strong>Faith</strong> - Determines the effectiveness of Miracles. Miracles are like light magic, so increase your Faith if you want to make a cleric or paladin-like character that utilizes lightning and healing.</li>
+			<li><strong>Intelligence</strong> - Determines the effectiveness of Sorceries and Pyromancies. Sorceries are another type of magic that is more arcane, and Pyromancies are the third and final form of magic which is all based on fire. 
 				If you like shooting magic missles or throwing fireballs, level up Intelligence.</li>
-			<li>Luck - Determines Item Discovery Chance and effectiveness of Bleed or Poison weapons. I don't recommend putting any points into luck as a beginner, because it is not helpful in combat unless you're making
-				a bleed or poison build. In that case, level up Luck to increase the speed of bleed or poison build up, but it won't increase the damage done/</li>
+			<li><strong>Luck</strong> - Determines Item Discovery Chance and effectiveness of Bleed or Poison weapons. I don't recommend putting any points into Luck as a beginner, because it is not helpful in combat unless you're making
+				a bleed or poison build. In that case, level up Luck to increase the speed of bleed or poison build up, but it won't increase the damage done.</li>
 		
 		
 		</ul>
@@ -132,7 +137,7 @@
 		It is important to plan out what you want your character to be before you start the game. This will allow you to most efficiently allocate your stats so that you don't waste any levels on stats you won't be utilizing.
 		For example: I want to make a character that is like a barbarian of sorts and only uses heavy weapons to deal damage. I would never put any points into any of the magic stats (Faith, Intelligence, Attunement), because I won't be using magic at all. Instead, I'll focus more
 		of my points into Strength, so that I can wield heavier weapons and deal more damage with them. Efficiently allocating stats will allow me to make the character I want stronger in his specific specialty faster than if I just threw levels into
-		random stats. When you plan your stats out like this, it is called a build. A Strength build is one that focuses on leveling Strength. Likewise a Magic build might focs more on leveling Intelligence. There are endless possibilities for builds,
+		random stats. When you plan your stats out like this, it is called a build. A Strength build is one that focuses on leveling Strength. Likewise a Magic build might focus more on leveling Intelligence. There are endless possibilities for builds,
 		so be creative when you plan it out!
 	</p>
 	
@@ -140,9 +145,9 @@
 		
 	<p>
 		When creating a new character, a player is given the choice between 10 starting classes. It's important to keep in mind that <cite>Dark Souls 3</cite> is not a 
-		class based game, and the only impact this starter class will have is what gear and starting stats your character will have. For example, you could choose to start as a theif which only has a small dagger and a shortbow, but you could still
-		mold that theif into a character that uses gigantic weapons to smash his opponents with. Your starting class doesn't matter. That being said, not all starting classes are made equal. They each start with
-		different weapons, armor, and stats, so certain starter classes are better for certain builds. Below are detailed descriptions of each Starting Class and which 
+		class based game, and the only impact this starter class will have is what gear and starting stats your character will have. For example, you could choose to start as a Theif, which only has a small dagger and a shortbow, but you could still
+		mold that Theif into a character that uses gigantic weapons to smash his opponents with. Your starting class doesn't matter. That being said, not all starting classes are made equal. They each start with
+		different weapons, armor, and stats, so certain starter classes are better for certain builds. Below are detailed descriptions of each Starting Class and which builds they are most efficient for:
 	</p>
 	
 	<h4>Knight</h4>
@@ -200,7 +205,7 @@
 	
 	<h4>Mercenary</h4>
 	<p>
-		A moderately armored mercenary with twin curved swords and a wooden shield. Best for a pure Dexterity build. Startes with the highest Dexterity of all the classes, and has average Attunement and Intelligence
+		A moderately armored mercenary with twin curved swords and a wooden shield. Best for a pure Dexterity build. Starts with the highest Dexterity of all the classes, and has average Attunement and Intelligence
 		if you want to throw some spells in too.
 	</p>
 	
@@ -253,7 +258,7 @@
 	
 	<h4>Warrior</h4>
 	<p>
-		A heavily armored northern warrior with the highest strength and lowest Attunement, Intelligence and Faith of all the classes, making it the best choice for a pure meelee build.
+		A heavily armored northern warrior with the highest Strength and lowest Attunement, Intelligence and Faith of all the classes, making it the best choice for a pure meelee build.
 		Only choose if you don't want to use any spells. Starts with a battle-axe and a wooden shield.
 	</p>
 	
@@ -359,7 +364,7 @@
 	
 	<h4>Thief</h4>
 	<p>
-		A thief with light armor, a knife meant for backstabbing, a small shield and a shortbow. Has the highest Luck stat of every class, meaning it has the highest item discovery chance and is good
+		A thief with light armor, a knife meant for backstabbing, a small shield and a shortbow. Has the highest Luck stat of every class, meaning it has the highest Item Discovery chance and is good
 		for Bleed/Poison builds. It's also the only class that starts with a bow if you want to make an archer character.
 	</p>
 	
@@ -412,8 +417,8 @@
 	
 	<h4>Assassin</h4>
 	<p>
-		A light-armored who uses sorceries as well as weapons to quickly dispose of enemies. Starts with a small shield for parrying, a thrusting sword, a staff for casting Sorceries, and a sorcery that negates
-		fall damage and reduces the noise your footsteps make. Good for pure Dexterity builds, and Intelligence/Dexterity builds like a warrior sorcerer.
+		A light-armored assassin who uses sorceries as well as weapons to quickly dispose of enemies. Starts with a small shield for parrying, a thrusting sword, a staff for casting Sorceries, and a sorcery that negates
+		fall damage and reduces the noise your footsteps make. Good for pure Dexterity builds, and Intelligence/Dexterity builds like a spellsword character.
 	</p>
 	
 	<table>
@@ -465,9 +470,9 @@
 	
 	<h4>Sorcerer</h4>
 	<p>
-		A light-armored mage with high Intelligence and Attunement. Starts with a staff, a light damaging sorcery and a heavier damaging sorcery, a small shield for parrying, a weak dagger, and
+		A light-armored mage with high Intelligence and Attunement. Starts with a staff, a light damaging projectile sorcery and a heavier damaging projectile sorcery, a small shield for parrying, a weak dagger, and
 		a ring that increases magic damage. This class requires more patience to play because of its almost total reliance on sorceries. It can be very difficult in the beginning of the game, but as 
-		you level up and find better sorceries, you can become incredibly strong magic force.
+		you level up and find better sorceries, you can become an incredibly strong magic force.
 		Good for full Intelligence builds that utilize a lot of sorceries.
 	</p>
 	
@@ -520,8 +525,8 @@
 	
 	<h4>Pyromancer</h4>
 	<p>
-		A light-armored pyromancer who wields a hand-axe, a wooden shield, a Pyromancy Hand (for casting Pyromancies), a ring which boosts Pyromancy damage, and the Fireball Pyromancy. Starts with high 
-		Intelligence and Faith, meaning its a great class if you want to use all forms of magic. A fantastic class for beginners because of its ranged fireballs as well as the close-quarters hand-axe.
+		A light-armored pyromancer who wields a hand-axe, a wooden shield, a Pyromancy Flame (for casting Pyromancies), a ring which boosts Pyromancy damage, and the Fireball Pyromancy. Starts with high 
+		Intelligence and Faith, meaning it's a great class if you want to use all forms of magic. A fantastic class for beginners because of its ranged fireballs as well as the close-quarters hand-axe.
 		A good jack-of-all-trades class.
 	</p>
 	
@@ -575,7 +580,7 @@
 	<h4>Cleric</h4>
 	<p>
 		A light-armored cleric who starts with a mace, a wooden shield, a chime for casting miracles, and the miracles Heal and Force. Has the highest starting Faith of all the classes as well as
-		fairly good Strength, making it ideal for a Strength/Faith or pure Faith builds. The Heal miracle is good to have for it you run out of Estus (basically your healing potion that every character has).
+		fairly good Strength, making it ideal for a Strength/Faith or pure Faith builds. The Heal miracle is good to have for it you run out of Estus (healing potions).
 	</p>
 	
 	<table>
@@ -628,7 +633,7 @@
 	<h4>Deprived</h4>
 	<p>
 		An unclothed enigma. Starts with nothing but a loincloth, a plank shield, and a wooden club. This class is a wild card - all of its stats start at 10 so you can build anything out of it.
-		It is a balanced class for trying builds, but is rarely optimal for min/maxing on your stats. Because of the terrible starting equipment, and the fact that other classes with more focused stat distribution will
+		It is a balanced class for trying new builds, but is rarely optimal for min/maxing on your stats. Because of the terrible starting equipment, and the fact that other classes with more focused stat distribution will
 		often times lead to better stat optimization for builds, I do not recommend choosing the Deprived if you are a beginner.
 	</p>
 	
@@ -678,6 +683,8 @@
 			<td>10</td>
 		</tr>
 	</table>
+	
+	</div>
 	
 	
 	<footer>
